--- a/Humcom-finals/Florida.html
+++ b/Humcom-finals/Florida.html
@@ -38,6 +38,10 @@
             text-shadow: 2px 2px 4px black;
         }
 
+        .dayum {
+            color: #000000;
+        }
+
         nav {
             padding: 20px;
             background-color: #0047AB;
@@ -130,7 +134,7 @@
     <header>
         <div class="STATE">FLORIDA</div>
         <h1 class="Sunshine">THE SUNSHINE STATE</h1>
-        <p class="Sunshine">From sunny beaches to magical theme parks, Florida offers endless fun and unforgettable adventures.</p>
+        <p class="dayum">From sunny beaches to magical theme parks, Florida offers endless fun and unforgettable adventures.</p>
     </header>
 
     <nav>
@@ -211,3 +215,4 @@
     </main>
 </body>
 </html>
+
