--- a/Humcom-finals/NewYork.html
+++ b/Humcom-finals/NewYork.html
@@ -28,7 +28,7 @@
         .Empire {
             text-align: center;
             padding: 20px;
-            color: white;
+            color: #B87333;
         }
         
         .STATE {
@@ -216,3 +216,4 @@
     </main>
 </body>
 </html>
+
